[gd_scene load_steps=6 format=2]

[ext_resource path="res://Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Citizen.gd" type="Script" id=2]
[ext_resource path="res://Sprite/light.png" type="Texture" id=3]
[ext_resource path="res://Character/Shadow.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0

[node name="Citizen" type="KinematicBody2D" groups=["Citizen"]]
collision_mask = 0
input_pickable = true
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 5 )

[node name="Character_Collection" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="Character6" parent="Character_Collection" instance=ExtResource( 1 )]
position = Vector2( 0, -15 )

[node name="Character5" parent="Character_Collection" instance=ExtResource( 1 )]
position = Vector2( 10, -10 )

[node name="Character4" parent="Character_Collection" instance=ExtResource( 1 )]
position = Vector2( -10, -10 )

[node name="Character3" parent="Character_Collection" instance=ExtResource( 1 )]
position = Vector2( 5, -5 )

[node name="Character2" parent="Character_Collection" instance=ExtResource( 1 )]
position = Vector2( -5, -5 )

[node name="Character1" parent="Character_Collection" instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 3 )
color = Color( 0.486275, 0.913725, 1, 1 )

[connection signal="input_event" from="." to="." method="_on_Citizen_input_event"]
